Fixing checkbox alignment, updating plugin description to new protocol, start to add new accordion code

--- a/PluginManagerPlugin2/styling.css
+++ b/PluginManagerPlugin2/styling.css
@@ -21,7 +21,6 @@ div.repoName {
     background-color: #A4DAEC;
     border: 2px solid #A4DAEC !important;
     outline: none;
-
 }
 
 input[type="checkbox"] {
@@ -37,10 +36,11 @@ div.pluginName {
     color: darkslategrey;
     font-weight: bold;
     font-size: 1.1em;
+    padding-top: 0.25em;
+    padding-bottom: 0.25em;
 }
 
 #repoName {
     color: darkslategrey;
     font-weight: bold;
-    font-size: 1.25em;
 }
